# autoreturn

./: README.md  autoreturn.py  pyproject.toml
autoreturn/: __init__.py
demo/: main.py
