[project]
name = "autoreturn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoreturn*"] # Only include the "autoreturn" package
exclude = ["demo*"]       # Exclude the "demo" folder
